--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     <header>
 <img src="logo.png" alt="">
 <h1>AGÊNCIA  DE VIAGENS DRAGÃO</h1>
-
-
-
     </header>
+
+ <main>
+<div class="conteiner">
+    <div class="item"><img src="monaco.jpeg" alt=""></div>
+    <div class="item"> <img src="petra.png alt="></div>
+    <div class="item"> <img src="valparaiso.jpg" alt=""></div>
+    <div class="item"> <img src="curitiba.jpg" alt=""></div>
+</div>
+ </main>
 
 
 </body>
