--- a/index.html
+++ b/index.html
@@ -14,12 +14,37 @@
 
  <main>
 <div class="conteiner">
-    <div class="item"><img src="monaco.jpeg" alt=""></div>
-    <div class="item"> <img src="petra.png alt="></div>
-    <div class="item"> <img src="valparaiso.jpg" alt=""></div>
-    <div class="item"> <img src="curitiba.jpg" alt=""></div>
-</div>
+   
+    <div class="item_monaco">
+        <a href="#" class="link_cidade">
+        <img src="monaco.jpeg" alt="">
+        <span class="grid_titulo">Monaco</span> </a>
+    </div>
+   
+    <div class="item_petra"> 
+        <a href="#" class="link_cidade">
+        <img src="petra.png alt="> 
+        <span class="grid_titulo">Petra</span>  </a>
+    </div>
+    
+    <div class="item_val"> 
+        <a href="#" class="link_cidade">
+        <img src="valparaiso.jpg" alt="">
+        <span class="grid_titulo">Val Paraíso</span> </a>
+    </div>
+    
+    <div class="item_cwb"> 
+        <a href="#" class="link_cidade">
+        <img src="curitiba.jpg" alt="">
+        <span class="grid_titulo">Curitiba</span> </a>
+    </div>
+    </div>
  </main>
+ <footer>
+    <p> @ Agências Dragão 2025. Direitos reservados</p>
+    <p> Chegando em você mais rápido que um avião! Igual a um dragão.</p>
+    <p>Contate: Dragon.Ag@hotmail.com</p>
+ </footer>
 
 
 </body>
