--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
  <main>
 <div class="conteiner">
    
-    <div class="item_monaco">
+    <div class="grid_item item_monaco">
         <a href="#" class="link_cidade">
         <img src="monaco.jpeg" alt="">
         <span class="grid_titulo">Monaco</span> </a>
     </div>
    
-    <div class="item_petra"> 
+    <div class="grid_item item_petra"> 
         <a href="#" class="link_cidade">
         <img src="petra.png alt="> 
         <span class="grid_titulo">Petra</span>  </a>
     </div>
     
-    <div class="item_val"> 
+    <div class="grid_item item_val"> 
         <a href="#" class="link_cidade">
         <img src="valparaiso.jpg" alt="">
         <span class="grid_titulo">Val Paraíso</span> </a>
     </div>
     
-    <div class="item_cwb"> 
+    <div class="grid_item item_cwb"> 
         <a href="#" class="link_cidade">
         <img src="curitiba.jpg" alt="">
         <span class="grid_titulo">Curitiba</span> </a>
