--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     <div class="grid_item item_petra"> 
         <a href="#" class="link_cidade">
-        <img src="petra.png alt="> 
+        <img src="petra.png " alt="">
         <span class="grid_titulo">Petra</span>  </a>
     </div>
     
