--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 <div class="conteiner">
    
     <div class="grid_item item_monaco">
-        <a href="#" class="link_cidade">
+        <a href="monaco.html" class="link_cidade">
         <img src="monaco.jpeg" alt="">
         <span class="grid_titulo">Monaco</span> </a>
     </div>
    
     <div class="grid_item item_petra"> 
-        <a href="#" class="link_cidade">
+        <a href="petra.html" class="link_cidade">
         <img src="petra.png " alt="">
         <span class="grid_titulo">Petra</span>  </a>
     </div>
     
     <div class="grid_item item_val"> 
-        <a href="#" class="link_cidade">
+        <a href="val.html" class="link_cidade">
         <img src="valparaiso.jpg" alt="">
         <span class="grid_titulo">Val Paraíso</span> </a>
     </div>
     
     <div class="grid_item item_cwb"> 
-        <a href="#" class="link_cidade">
+        <a href="cwb.html" class="link_cidade">
         <img src="curitiba.jpg" alt="">
         <span class="grid_titulo">Curitiba</span> </a>
     </div>
