--- a/monaco.html
+++ b/monaco.html
@@ -16,7 +16,11 @@
     <div class="informação">
         <h2>INFORMAÇÕES</h2>
         <p>Mónaco, oficialmente Principado do Mónaco ou Principado de Mônaco, é uma cidade-estado soberana e, portanto, um microestado, situado ao sul da França. Fazendo costa com o mar Mediterrâneo, o principado, fundado em 1297 pela Casa de Grimaldi — até hoje sua soberana —, fica a menos de 20 km a leste da cidade de Nice e 20 km a oeste da cidade de Ventimiglia. Possui aproximadamente uma área de 2,02 km², sendo o segundo menor Estado do mundo, atrás apenas do Vaticano, com 44 hectares de área, e é o estado com a densidade populacional mais alta do mundo.Tem como forma de governo a monarquia constitucional, em que o monarca é Sua Alteza Sereníssima, o Príncipe Alberto II do Mónaco.</p>
+    <img src="1.png" alt="">
+    <img src="2.png" alt="">
+    <img src="3.png" alt="">
     </div>
+
     <div class="maps">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19391.828151033675!2d7.4163586786892655!3d43.7393761100991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cdc26f7b3f8531%3A0x74f7784c3ac49cfc!2zTcO0bmFjbw!5e0!3m2!1spt-BR!2sbr!4v1755285171446!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
