--- a/monaco.html
+++ b/monaco.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-<img src="logo.png" alt="">
+<img src="logo.png" alt="" onclick="location.href='index.html'"  >
 <h1>AGÊNCIA  DE VIAGENS DRAGÃO</h1>
     </header>
 
