--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="grid_item item_monaco">
         <a href="monaco.html" class="link_cidade">
         <img src="monaco.jpeg" alt="">
-        <span class="grid_titulo">Mónaco</span> </a>
+        <span class="grid_titulo">Mônaco</span> </a>
     </div>
    
     <div class="grid_item item_petra"> 
